# Air-FAR_humble_codex

./: .gitattributes  .gitignore  MIGRATION_STATUS.md  README.md  airfar_planner_ros2.txt  启动大型环境仿真.txt  情况说明.txt
docs/: AB_REMAP_EXPERIMENT_RESULT.md  AIRFAR_LOCAL_PLANNER_SOURCE_DIAGNOSIS.md  CAMERA_RUNTIME_DIAGNOSIS.md  COLLISION_AND_OBSTACLE_DIAGNOSIS.md  FULL_SIM_LAUNCH_DIAGNOSIS.md  INTERFACE_ALIGNMENT_PLAN.md  REMAP_AB_TEST.md  SIMULATION_VALIDATION_CHECKLIST.md  UAV_MODEL_MIGRATION_PLAN.md  VALIDATION_REVIEW.md  VENDOR_SIM_ENV_PLAN.md
docs/runtime_notes/: external_runtime_deps_after_vendor_20260507_150246.txt  full_sim_launch_test_20260507_153752.txt  runtime_auto_summary_20260507_150847.txt
scripts/: audit_external_runtime_deps.sh  check_active_local_planner_source.sh  compare_airfar_far_interfaces.sh  debug_camera_motion_runtime.sh  debug_obstacle_avoidance_runtime.sh  run_camera_validation_with_launch.sh  validate_airfar_ros2.sh
src/airfar_planner/: CMakeLists.txt  package.xml
src/airfar_planner/config/: default.yaml  outdoor.yaml
src/airfar_planner/include/airfar_planner/: airfar_planner.h  dynamic_graph.h  graph_msger.h  graph_planner.h  planner_visualizer.h  point_struct.h  ros2_compat.h  terrain_planner.h  utility.h
src/airfar_planner/launch/: airfar.launch.py  airfar_ab_remap.launch.py  airfar_full_sim.launch.py  airfar_nav_viz.launch.py  airfar_sim_env.launch.py
src/airfar_planner/rviz/: airfar_graph_debug.rviz  airfar_planner.rviz
src/airfar_planner/src/: airfar_planner.cpp  contour_graph.cpp  dynamic_graph.cpp  graph_msger.cpp  graph_planner.cpp  planner_visualizer.cpp  terrain_planner.cpp  utility.cpp
src/graph_decoder/: package.xml
src/local_planner/: CMakeLists.txt  package.xml
src/local_planner/launch/: local_planner.launch  local_planner_outdoor.launch
src/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/nav_graph_msg/: CMakeLists.txt  package.xml
src/nav_graph_msg/msg/: Graph.msg  Node.msg
src/route_goal_msg/: CMakeLists.txt  package.xml
src/route_goal_msg/msg/: RouteGoal.msg
src/teleop_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/teleop_rviz_plugin/src/: drive_widget.cpp  drive_widget.h  teleop_panel.cpp  teleop_panel.h
src/vehicle_simulator/: CMakeLists.txt  package.xml
src/vehicle_simulator/hook/: gazebo_model_path.sh.in
src/vehicle_simulator/launch/: airfar_system_gazebo.launch.py  system_gazebo.launch.py  vehicle_simulator_gazebo.launch.py
src/vehicle_simulator/mesh/: download_environments.sh
src/vehicle_simulator/mesh/campus/: model.config  model.sdf
src/vehicle_simulator/mesh/campus/meshes/: campus.dae
src/vehicle_simulator/mesh/enclosing_walls/: model.config  model.sdf
src/vehicle_simulator/mesh/forest/grass_plane/: model.sdf
src/vehicle_simulator/mesh/garage/: model.config  model.sdf
src/vehicle_simulator/mesh/garage/preview/: pointcloud.ply
src/vehicle_simulator/mesh/pillars/: model.config  model.sdf
src/vehicle_simulator/rviz/: vehicle_simulator_gazebo.rviz  vehicle_simulator_unity.rviz
src/vehicle_simulator/src/: vehicleSimulator.cpp
src/vehicle_simulator/urdf/: lidar.urdf.xacro  rgbd_camera.urdf.xacro  robot.urdf.xacro
src/vehicle_simulator/world/: campus.world  forest.world  garage.world  office.world  tunnel.world
src/waypoint_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/waypoint_rviz_plugin/src/: goal_tool.cpp  goal_tool.h  pose_tool.cpp  pose_tool.h
