<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_rviz_plugin</name>
  <version>0.0.1</version>
  <description>ROS2 RViz teleoperation panel for Air-FAR simulation.</description>
  <maintainer email="zhangji@cmu.edu">Ji Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
